--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -10,20 +10,20 @@ $$\odot \quad : \quad K \times K \rightarrow K$$
 $(a;b) \longmapsto a \cdot b $\\\\\\
 gegeben sind, sodass\\
 
-\begin{array}{rl}
-$ (A1) & a+(b+c) = (a+b)+c $\\\\
-$ (A2) & a+b = b+a$\\\\
-$ (A3) & \exists ! \quad 0 \quad $ mit:  \\\\
-$ & a+0 = 0+a = a$\\\\
-$ (A4) & \forall a\in K \quad \exists ! -a \in K$  mit:  \\\\
-$ & a+(-a) = 0$\\\\\\
-$ (M1) & a\cdot (b \cdot c) = (a\cdot b) \cdot c $\\\\
-$ (M2) & a\cdot b = b\cdot a    $\\\\
-$ (M3) & \exists ! \quad 1 \in K $ mit \\\\
-$ & 1\cdot a = a \cdot 1 = a $ \\\\
-$ (M4) & \exists ! \quad \dfrac{1}{a}$ \quad zu jedem $a \in K \backslash \{0\} $ mit: \\\\
-$ & a \cdot \dfrac{1}{a} = 1 $\\\\\\
-$(D)$ & $Distributivgesetz: $a\cdot (b+c) = ab + ac$ \\
+\begin{array}{rcl}
+\textcolor{titlepagecolor}{Assoziativgesetz} & $ (A1) & a+(b+c) = (a+b)+c $\\\\
+\textcolor{titlepagecolor}{Kommutativgesetz} & $ (A2) & a+b = b+a$\\\\
+\textcolor{titlepagecolor}{Neutrale\,\, Element} & $ (A3) & \exists ! \quad 0 \quad $ mit:  \\\\
+&$ & a+0 = 0+a = a$\\\\
+\textcolor{titlepagecolor}{Inverse\,\, Element} & $ (A4) & \forall a\in K \quad \exists ! -a \in K$  mit:  \\\\
+$ & &a+(-a) = 0$\\\\\\
+\textcolor{titlepagecolor}{Assoziativgesetz} & $ (M1) & a\cdot (b \cdot c) = (a\cdot b) \cdot c $\\\\
+\textcolor{titlepagecolor}{Kommutativgesetz} & $ (M2) & a\cdot b = b\cdot a    $\\\\
+\textcolor{titlepagecolor}{Neutrale\,\, Element} & $ (M3) & \exists ! \quad 1 \in K $ mit \\\\
+&$ & 1\cdot a = a \cdot 1 = a $ \\\\
+\textcolor{titlepagecolor}{Inverse\,\, Element} &$ (M4) & \exists ! \quad \dfrac{1}{a}$ \quad zu jedem $a \in K \backslash \{0\} $ mit: \\\\
+$ && a \cdot \dfrac{1}{a} = 1 $\\\\\\
+\textcolor{titlepagecolor}{Distributivgesetz} & $(D)$ & $a\cdot (b+c) = ab + ac$ \\
 \end{array}\\\\\\
 
 Dies erfüllen $\Q$, $\R$, $\R^{n}$ (Vektorräume), $\C$, Matritzen, prime Restklassengruppen $\Z / p\Z$ ...
@@ -174,7 +174,7 @@ Für Kongruenzen sind mit der Addition und der Multiplikation verträglich. Seie
 $ a & \equiv & a^{*} \mod n  $\\
 $ b & \equiv & b^{*}\mod n  $
 \end{array}\right.\\\\
-$\Rightarrow a+b \equiv a^{*} + b^{*} \mod n$ \qquad und \qquad  $a\cdot b \equiv a^{*} \cdot b^{*} \mod n$
+$\Rightarrow a+b \equiv a^{*} + b^{*} \mod n$ \qquad und \qquad  $a\cdot b \equiv a^{*} \cdot b^{*} \mod n$\\
 \end{Definition}
 
 \begin{Beispiel}
@@ -189,9 +189,71 @@ $\Rightarrow a+b \equiv a^{*} + b^{*} \mod n$ \qquad und \qquad  $a\cdot b \equi
 \begin{Theorem}
 Seien $a,b \in \N$ mit \quad $a,b \geq 2$ \quad und $a|b$, dann gilt
 $$[r] \mod b \quad \subseteq \quad [r] \mod a $$
+($\subseteq$ heißt "Teilmenge")
 \end{Theorem}
 
+\begin{Beispiel}
+So gilt zum Beispiel:\\\\
+\begin{array}{rccl}
+& [2] \mod 10 & \subseteq & [2] \mod 5\\\\
+\Leftrightarrow & \{ ... , -28, -18, -8, 2, 12, 22, ... \} & \subseteq & \{ ..., \textcolor{red}{-18}, -13, \textcolor{red}{-8}, -3, \textcolor{red}{2}, 7, \textcolor{red}{12}, 17, ... \}\\
+\end{array}.\\
+\end{Beispiel}
 
+\subsection{Mit Kongruenzen rechnen und beweisen}
+
+\begin{Definition}
+Kongruenzen sind mit der Addition und der Multiplikation verträglich. Daraus folgen diese Eigenschaften:\\\\
+Sei $n \in \N$ mit $n \geq 2$. $a$ und $a^{*}$ zwei (beliebige) ganze Zahlen.\\
+\begin{enumerate}
+\item Für jede ganze Zahl $k$ gilt:
+$$a \equiv a^{*} \mod n \quad \Rightarrow \quad k \cdot a \equiv k \cdot a^{*} \mod n$$
+\item Für jede natürliche Zahl $p \in \N \, \backslash \{0\}$ gilt:
+$$a \equiv a^{*} \mod n \quad \Rightarrow \quad a^p \equiv {a^{*}}^p \mod n$$
+\end{enumerate}
+Diese Eigenschaften sind \textbf{keine} Äquivalenzen, sondern Folgerungen! Bei Beweisen kann man also nicht vom Ergebnis ausgehen, und dann durch das dividieren auf beiden Seiten des Kongruenzzeichens auf ein einfaches Ergebnis kommen. Man muss von etwas einfachem ausgehen, und  das dann so umformen, dass man auf die gewünschte Kongruenz kommt.
+\end{Definition}
+
+\begin{Beispiel}\\
+\mathrm{Z\kern-.3em\raise-0.5ex\hbox{Z}} : $35^{228} + 84^{501} \equiv 0 \mod 17$\\\\
+\begin{minipage}[b]{0.3\linewidth}
+\\
+\begin{array}{rccl}
+$\Rightarrow & 35 &=& 34 + 1 = 17 \cdot 2 + 1$ \\
+$\Rightarrow & 35 &\equiv& 1 \mod 17$\\
+$\Rightarrow & 35^{228} &\equiv& 1 \mod 17$
+\end{array}
+\end{minipage}
+\hfill \vline \hfill
+\begin{minipage}[b]{0.6\linewidth}
+\begin{array}{rccl}
+$\Rightarrow & 84 &=& 85 - 1 = 17 \cdot 5 - 1 $\\
+$\Rightarrow & 84 &\equiv& -1 \mod 17$ \\
+$\Rightarrow & 84^{501} &\equiv& -1 \mod 17 
+\end{array}
+\end{minipage}
+$$\Rightarrow \quad 35^{228} + 84^{501}\quad\equiv\quad 1-1 \mod 17 \quad\equiv\quad 0 \mod 17$$\\
+\end{Beispiel}
+
+\begin{Definition}
+Es seien $a$ und $b$ zwei natürliche Zahlen größer Null mit $a>b$. $r$ sei der Rest der Euklidischen Division von a durch b. Dann gilt:\\
+\begin{enumerate}
+\item Wenn $r = 0$, dann sind die gemeinsamen Teiler von $a$ und $b$ die Teiler von $b$. Da die Division aufgeht, teilt $b$ die Zahl $a$. $a$ ist also ein Vielfaches von $b$, deshalb sind die Teiler von $a$ auch die Teiler von $b$.
+\item Wenn $r \neq 0$, dann sind die gemeinsamen Teiler von $a$ und $b$ gerade die gemeinsamen Teiler von $b$ und $r$. (Äquivalenz $\Leftrightarrow$) 
+\end{enumerate}
+\end{Definition}
+
+\begin{Beweis}
+Die Euklidische Division sagt \quad $a = b \cdot q +r$\\\\
+\begin{array}{rcl}
+$n | a \quad \land \quad n | b \, \Rightarrow \, n | q \cdot b & \Rightarrow & n | a - q\cdot b $\\
+$ & \Rightarrow & n | r $\\
+\end{array}\\\\
+Alle Teiler $n$ haben die Eigeschaften: $n | a$, $n | b$ und $n | r$. $n$ ist also Teiler von $a$, $b$ und $r$.\\\\
+Umgekehrt gilt: wenn $n | b$ und $n | r$:\\\\
+\Rightarrow \quad $n | q \cdot b + r$\\
+\Rightarrow \quad $$n | a$\\
+\end{Beweis}
 
 
 
@@ -283,7 +345,7 @@ $ \textbf{Induktionsschluss}: &  \sum\limits_{i=1}^{n+1} i^2 = \overbrace{\sum\l
 
 
 \begin{Beweis}
-Beweis einer Absch"atzung der Fakult"at \\
+Beweis einer Absch"atzung der Fakult"at \\\\
 $\forall n\in \N,\quad n\geq 4 : \quad n! >n^2 $\\\\
 
 \begin{array}{rl}
